# cmhk-workshop

./: extract_markdown.py  extract_ocr_text.py  pdf_to_png.py  pdf_to_text_openrouter.py  pyproject.toml  viewer.py
pdfs/: AR2024_C.md  AR2024_C.txt
